# auth-services

./: .env.dev  .env.example  .env.production  .env.staging  .gitignore  Cargo.toml  Dockerfile  README.md  api_contract.yaml  docker-compose.yml
.github/workflows/: deploy.yml
src/: main.rs
src/clients/: google_oauth_client.rs
src/config/: config.rs  mod.rs
src/database/: neo4j.rs
src/dto/: create_account_request.rs  create_password_request.rs  google_login_request.rs
src/handlers/: auth_handler.rs
src/models/: identity_account_model.rs  user_model.rs
src/repositories/: identity_account_repository.rs  user_repository.rs
src/routes/: auth_routes.rs
src/services/: auth_service.rs
src/utils/: jwt.rs  password.rs  response.rs
